k8s/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-ingress
  namespace: front
spec:
  podSelector:
    matchLabels:
      app: react
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 172.31.0.0/16
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 80
